--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 :root {
     --cell-size: 10em;
-    --symbol-size: cal(var(--cell-size) * 0.9);
+    --symbol-size: calc(var(--cell-size) * 0.9);
 }
 
 body {
@@ -68,11 +68,44 @@ nav .buttons{
     height: var(--cell-size);
     background-color: white;
     border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.cell i {
-    min-width: 90%;
-    min-height: 90%;
+.cell.x::before, .cell.x::after {
+    content: '';
+    position: absolute;
+    width: calc(var(--symbol-size) * 0.15);
+    height: var(--symbol-size);
+    background-color: black;
+}
+
+.cell.x::before {
+    transform: rotate(45deg);
+}
+
+.cell.x::after {
+    transform: rotate(-45deg);
+}
+
+.cell.o::before, .cell.o::after {
+    content: '';
+    position: absolute;
+    border-radius: 50%;
+    background-color: black;
+}
+
+.cell.o:before {
+    width: calc(var(--symbol-size) * 0.9);
+    height: calc(var(--symbol-size) * 0.9);
+    background-color: black;
+}
+
+.cell.o::after {
+    width: calc(var(--symbol-size) * 0.6);
+    height: calc(var(--symbol-size) * 0.6);
+    background-color: white;
 }
 
 .cell:first-child,
