start game: setting up who starts first and display a message to show whose turn it is

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ nav .buttons{
     flex-direction: column;
 }
 
-.main-content .status {
+.main-content .message {
     text-align: center;
     padding: 1.5em;
 }
