--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,10 @@ nav .buttons{
     padding: 1em;
 }
 
+nav .buttons:hover {
+    cursor: pointer;
+}
+
 .buttons .fa-solid {
     display: flex;
     justify-content: space-between;
@@ -187,6 +191,17 @@ nav .buttons{
     align-items: center;
 }
 
-
+#overlay {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    cursor: pointer;
+}
 
 
