--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,15 @@ nav {
     align-items: center;
     padding-left: 1em;
     padding-right: 1em;
+    border-bottom: 2px solid black;
 }
+
+nav .title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 nav h1 {
     padding: 1em;
 }
@@ -59,6 +67,7 @@ nav .buttons:hover {
     grid-row: 2 / 3;
     display: flex;
     flex-direction: column;
+    border-top: 2px solid black;
 }
 
 .main-content .message {
