--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,28 @@ nav {
     align-items: center;
     padding-left: 1em;
     padding-right: 1em;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid;
+    border-color: #e83b2b;
+    color: #e83b2b;
+    background-color: white;
+}
+
+nav[data-theme='blueTheme'] {
+    color:#72a8db;
+    border-color: #72a8db;
+    background-color: #FEF9EF;
+}
+
+nav[data-theme='beigeTheme'] {
+    color: #AD8B73;
+    border-color: #AD8B73;
+    background-color: #FFFBE9;
+}
+
+nav[data-theme='darkTheme'] {
+    color: white;
+    border-color: white;
+    background-color: black;
 }
 
 nav .title {
@@ -50,6 +71,63 @@ nav .buttons div {
     justify-content: center;
 }
 
+nav .themeChange {
+    position: relative;
+}
+
+nav .themeChoice {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    background-color: white;
+    z-index: 1;
+    border-radius: 32px;
+    border: 4px solid;
+    border-color: #e83b2b;
+    opacity: 0;
+}
+
+nav .themeChoice[data-theme='blueTheme'] {
+    background-color:#FEF9EF;
+    border-color:#72a8db
+}
+
+nav .themeChoice[data-theme='beigeTheme'] {
+    border-color: #AD8B73;
+    background-color: #FFFBE9;
+}
+
+nav .themeChoice[data-theme='darkTheme'] {
+    border-color: white;
+    background-color: black;
+}
+
+nav .themeChoice[data-theme='darkTheme'] .darkTheme {
+    color: white;
+}
+
+.themeChoice div {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.themeChoice .redTheme {
+    color: #e83b2b;
+}
+
+.themeChoice .blueTheme {
+    color: #72a8db
+}
+
+.themeChoice .beigeTheme {
+    color: #E3CAA5
+}
+
+.themeChoice .darkTheme {
+    color: black
+}
+
 nav .buttons:hover {
     cursor: pointer;
 }
@@ -68,7 +146,27 @@ nav .buttons:hover {
     grid-row: 2 / 3;
     display: flex;
     flex-direction: column;
-    border-top: 2px solid black;
+    border-top: 2px solid;
+    border-color: #e83b2b;
+    color: #e83b2b;
+}
+
+.main-content[data-theme='blueTheme'] {
+    border-color:#72a8db;
+    color:#72a8db;
+    background-color: #FEF9EF;
+}
+
+.main-content[data-theme='beigeTheme'] {
+    color: #AD8B73;
+    border-color: #AD8B73;
+    background-color: #FFFBE9;
+}
+
+.main-content[data-theme='darkTheme'] {
+    color: white;
+    border-color: white;
+    background-color: black;
 }
 
 .main-content .message {
@@ -98,10 +196,26 @@ nav .buttons:hover {
     width: var(--cell-size);
     height: var(--cell-size);
     background-color: white;
-    border: 2px solid black;
+    border: 2px solid;
+    border-color: #e83b2b;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.cell[data-theme='blueTheme'] {
+    background-color: #FEF9EF;
+    border-color:#72a8db;
+}
+
+.cell[data-theme='beigeTheme'] {
+    background-color: #FFFBE9;
+    border-color:#AD8B73;
+}
+
+.cell[data-theme='darkTheme'] {
+    background-color: black;
+    border-color:white;
 }
 
 .cell.x,
@@ -111,8 +225,23 @@ nav .buttons:hover {
 
 .cell.x::before, 
 .cell.x::after {
-    background-color: black;
+    background-color: #e83b2b;
 } 
+
+.cell.x[data-theme='blueTheme']::before,
+.cell.x[data-theme='blueTheme']::after {
+    background-color: #FF865E
+}
+
+.cell.x[data-theme='beigeTheme']::before,
+.cell.x[data-theme='beigeTheme']::after {
+    background-color: #CEAB93
+}
+
+.cell.x[data-theme='darkTheme']::before,
+.cell.x[data-theme='darkTheme']::after {
+    background-color: white
+}
 
 .board.x .cell:not(.x):not(.o):hover::before,
 .board.x .cell:not(.x):not(.o):hover::after {
@@ -140,7 +269,19 @@ nav .buttons:hover {
 }
 
 .cell.o::before {
-    background-color: black;
+    background-color: #e83b2b;
+}
+
+.cell.o[data-theme='blueTheme']::before {
+    background-color: #FEE440;
+}
+
+.cell.o[data-theme='beigeTheme']::before {
+    background-color: #CEAB93;
+}
+
+.cell.o[data-theme='darkTheme']::before {
+    background-color: white;
 }
 
 .board.o .cell:not(.x):not(.o):hover:before {
@@ -169,6 +310,21 @@ nav .buttons:hover {
     background-color: white;
 }
 
+.cell.o[data-theme='blueTheme']::after, 
+.board.o .cell[data-theme='blueTheme']:not(.x):not(.o):hover::after {
+    background-color:#FEF9EF;
+}
+
+.cell.o[data-theme='beigeTheme']::after, 
+.board.o .cell[data-theme='beigeTheme']:not(.x):not(.o):hover::after {
+    background-color:#FFFBE9;
+}
+
+.cell.o[data-theme='darkTheme']::after, 
+.board.o .cell[data-theme='darkTheme']:not(.x):not(.o):hover::after {
+    background-color:black;
+}
+
 .cell:first-child,
 .cell:nth-child(2),
 .cell:nth-child(3) {
@@ -194,8 +350,32 @@ nav .buttons:hover {
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
     align-items: center;
-    padding: 2.4em;
+    padding: 32px;
     overflow: hidden;
+}
+
+.scoreBoard[data-theme='blueTheme'] .player1 {
+    color:#FF865E
+}
+
+.scoreBoard[data-theme='beigeTheme'] .player1 {
+    color:#CEAB93
+}
+
+.scoreBoard[data-theme='darkTheme'] .player1 {
+    color:white
+}
+
+.scoreBoard[data-theme='blueTheme'] .player2 {
+    color:#FEE440
+}
+
+.scoreBoard[data-theme='beigeTheme'] .player2 {
+    color:#CEAB93
+}
+
+.scoreBoard[data-theme='darkTheme'] .player2 {
+    color:white
 }
 
 .score {
@@ -204,6 +384,10 @@ nav .buttons:hover {
     justify-content: center;
     text-align: center;
     align-items: center;
+}
+
+.score div {
+    padding: 1.2em;
 }
 
 #overlay {
