--- a/css/styles.css
+++ b/css/styles.css
@@ -400,6 +400,22 @@ nav .buttons:hover {
     align-items: flex-end;
 }
 
+.banner[data-theme='blueTheme'] {
+    background-color:#72a8db;
+    color: #FEF9EF;
+}
+
+.banner[data-theme='beigeTheme'] {
+    background-color: #CEAB93;
+    color: #FFFBE9
+}
+
+.banner[data-theme='darkTheme'] {
+    background-color: black;
+    color: white;
+    border-top: 4px solid white;
+}
+
 .banner h3 {
     padding-right: 0.5em;
 }
@@ -418,8 +434,8 @@ nav .buttons:hover {
 #overlay {
     display: none;
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 99vw;
+    height: 99vw;
     top: 0;
     left: 0;
     right: 0;
@@ -446,5 +462,70 @@ nav .buttons:hover {
     100% {
         opacity: 1;
         top: 60px;
+    }
+}
+
+@media (max-width: 720px) {
+    :root {
+        --cell-size: 6em;
+        --symbol-size: calc(var(--cell-size) * 0.9);
+    }
+    
+    .container {
+        width: 99vw;
+        height: 99vw;
+    }
+
+    .container nav {
+        font-size: 0.62em;
+        align-items: center;
+        justify-content: center;
+        padding: 0.5em 0 0.5em 0;
+    }
+    
+    nav .title {
+        height: 4em;
+    }
+
+    nav .themeChoice {
+        top: 30px;
+        border-width: 3px;
+    }
+
+    nav .themeChoice div {
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    
+    .main-content .message {
+        font-size: 0.9em;
+        padding: 1em;
+    }
+
+    .main-content .board {
+        padding: 1em;
+    }
+
+    .main-content .scoreBoard {
+        font-size: 0.9em;
+    }
+
+    .banner {
+        font-size: 0.8em;
+    }
+
+    @keyframes slide {
+        0% {
+            opacity: 0;
+            top: 0px;
+        }
+        30% {
+            opacity: 0;
+            top: 10px;
+        }
+        100% {
+            opacity: 1;
+            top: 30px;
+        }
     }
 }
