--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,10 @@ body {
     font-family: Helvetica, Arial, sans-serif;
 }
 
+a:visited {
+    color: inherit;
+}
+
 .container {
     width: 100vw;
     height: 100vh;
@@ -43,8 +47,8 @@ nav[data-theme='blueTheme'] {
 }
 
 nav[data-theme='beigeTheme'] {
-    color: #AD8B73;
-    border-color: #AD8B73;
+    color: #CEAB93;
+    border-color: #CEAB93;
     background-color: #FFFBE9;
 }
 
@@ -169,7 +173,7 @@ nav .buttons:hover {
 
 .main-content[data-theme='beigeTheme'] {
     color: #AD8B73;
-    border-color: #AD8B73;
+    border-color: #CEAB93;
     background-color: #FFFBE9;
 }
 
@@ -434,6 +438,11 @@ nav .buttons:hover {
     display: flex;
     flex-direction: row;
     padding-top: 1em;
+}
+
+.banner .icons .github a {
+    width: 100%;
+    height: 100%;
 }
 
 .icons div {
